--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,17 +19,13 @@ services:
         networks:
             - fakecam
         read_only: true
-        volumes:
-            - ${IMAGE_BACKGROUND}:/src/background-custom:ro
-            - ${IMAGE_FOREGROUND}:/src/foreground-custom:ro
-            - ${IMAGE_FOREGROUND_MASK}:/src/foreground-mask-custom:ro
         devices:
             - ${VIDEO_INPUT}:/dev/video0
             - ${VIDEO_OUTPUT}:/dev/video2
         depends_on:
             - bodypix
         command: ["--bodypix-url", "http://bodypix:9000/",
-                  "-b", "background-custom", "-f", "foreground-custom" , "-m", "foreground-mask-custom",
+                  "--no-foreground", "--no-background", "--background-blur=50",
                   "--webcam-path", "/dev/video0", "--v4l2loopback-path", "/dev/video2"]
 
 networks:
