--- a/bodypix/Dockerfile
+++ b/bodypix/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:13-buster-slim AS build
+FROM node:14-buster-slim AS build
 
 WORKDIR /src
 
@@ -6,9 +6,9 @@ COPY package.json /src/
 
 RUN apt-get update && \
     apt-get install --no-install-recommends -y build-essential python3 python3-dev && \
-    npm install
+    yarn install
 
-FROM node:13-buster-slim
+FROM node:14-buster-slim
 
 COPY --from=build /src /src
 
